--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="feature">
                         <i class="fas fa-file-invoice-dollar fa-3x"></i>
                         <h3>Tax Management</h3>
-                        <p>Stay on top of your taxes with our intuitive tax management tools. Never miss a deadline</p>
+                        <p>Stay on top of your taxes with our intuitive tax management tools. Never miss a deadline.</p>
                     </div>
                     <div class="feature">
                         <i class="fas fa-money-check-alt fa-3x"></i>
@@ -60,7 +60,34 @@
                     <div class="feature">
                         <i class="fas fa-receipt fa-3x"></i>
                         <h3>Receipt Management</h3>
-                        <p>Store and manage your bills efficiently without ever losing or misplacing another receipt</p>
+                        <p>Store and manage your bills efficiently without ever losing or misplacing another receipt.</p>
+                    </div>
+
+                    <div class="feature">
+                        <i class="fas fa-tasks fa-3x"></i>
+                        <h3>Easy Content Access</h3>
+                        <p>Access your financial data with ease, with weekly and monthly total summaries and budgets provided together.</p>
+                    </div>
+
+                    <div class="feature">
+                        <i class="fas fa-filter fa-3x"></i>
+                        <h3>Reinforced Filter</h3>
+                        <p>Review your transactions with more filtering options to get a detailed view of your finances.</p>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-calendar-alt fa-3x"></i>
+                        <h3>Improved Calendar Visuals</h3>
+                        <p>Review all your monthly transactions in one place with improved calendar visuals for easy tracking.</p>
+                    </div>                    
+                    <div class="feature">
+                        <i class="fas fa-chart-pie fa-3x"></i>
+                        <h3>Advanced Budget Feature</h3>
+                        <p>Set a monthly budget for each category with our advanced budgeting tool.</p>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-chart-line fa-3x"></i>
+                        <h3>Asset Graphs</h3>
+                        <p>Review asset trends and growth with our detailed asset graphs in your financial chart.</p>
                     </div>
                 </div>
             </section>
