--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                         <label for=""><input type="checkbox">Remember Me  <a href="#">Forget Password</a></label>
                       
                     </div>
-                    <button>Log in</button>
+                    <button><a href="profile.html">Login</a></button>
                     <div class="register">
                         <p>Don't have a account <a href="registration.html">Register</a></p>
                     </div>
