--- a/registration.html
+++ b/registration.html
@@ -46,7 +46,7 @@
                         <label for=""><input type="checkbox">Remember Me </label>
                     </div>
                     <br>
-                    <button>Register</button>
+                    <button><a href="login.html">Register</a></button>
                     <div class="register">
                         <p>Already have an account? <a href="login.html">Login</a></p>
                     </div>
