--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <li>- Tax Management</li>
                             <li>- Monthly Budget Tracking</li>
                             <li>- Receipt Storage</li>
-                            <li><button class="btn">Sign Up</button></li>
+                            <li><button class="btn"><a href="login.html">Sign Up</a></button></li>
                         </ul>
                     </div>
                     <div class="plan">
@@ -115,7 +115,7 @@
                             <li>- Personalised Budget Tracking</li>
                             <li>- Advanced Saving Plans</li>
                             <li>- Receipt Arrangement</li>
-                            <li><button class="btn">Sign Up</button></li>
+                            <li><button class="btn"><a href="login.html">Sign Up</a></button></li>
                         </ul>
                     </div>
                 </div>
