--- a/profile.html
+++ b/profile.html
@@ -24,6 +24,7 @@
                 <a href="#monthly-budget">Monthly Budget</a>
                 <a href="#tax-management">Tax Management</a>
                 <a href="#money-spent">Money Spent</a>
+                <a href="index.html">Home</a>
             </nav>
 
             <section class="monthly-budget" id="monthly-budget">
