--- a/profile.html
+++ b/profile.html
@@ -79,14 +79,5 @@
             <p>&copy; 2023 EspeceSense.com | All rights reserved</p>
         </footer>
     </div>
-    <script>
-        function updateMonthlyBudget(salary, housing, utilities, transportation, groceries) {
-            document.querySelector('.salary p').textContent = `Your monthly salary: $${salary}`;
-            document.querySelector('.budget-item:nth-child(1) span:last-child').textContent = `$${housing}`;
-            document.querySelector('.budget-item:nth-child(2) span:last-child').textContent = `$${utilities}`;
-            document.querySelector('.budget-item:nth-child(3) span:last-child').textContent = `$${transportation}`;
-            document.querySelector('.budget-item:nth-child(4) span:last-child').textContent = `$${groceries}`;
-        }
-        updateMonthlyBudget(500, 100, 30, 20, 400);
-    </script></body>
+</body>
 </html>
