--- a/login.html
+++ b/login.html
@@ -21,12 +21,12 @@
                         <label for="">Password</label>
                     </div>
                     <div class="forget">
-                        <label for=""><input type="checkbox">Remember Me  <a href="#">Forget Password</a></label>
+                        <label for=""><input type="checkbox">Remember Me  <a href="#"><br></a></label>
                       
                     </div>
-                    <button><a href="profile.html">Login</a></button>
+                    <button>Log in</button>
                     <div class="register">
-                        <p>Don't have a account <a href="registration.html">Register</a></p>
+                        <p>Don't have a account <a href="registration.html"><br>Register Now</a></p>
                     </div>
                 </form>
             </div>
