--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>
       EspeceSense.com
     </title>
-    <meta name="description" content="Simple landind page" />
+    <meta name="description" content="Simple landing page" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
@@ -45,7 +45,7 @@
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
           <ul class="list-reset lg:flex justify-end flex-1 items-center">
             <li class="mr-3">
-              <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="Login.html">Login</a>
+              <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="login.html">Login</a>
             </li>
             <li class="mr-3">
               <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="registration.html">Register</a>
@@ -160,10 +160,10 @@
             <a href="#" class="flex flex-wrap no-underline hover:no-underline">
 
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                Reciept Storage.
+                GST Calculations
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
-                Store and manage digital copies of your receipts securely, eliminating paper clutter and simplifying expense tracking.              </p>
+                Efficient and accurate GST calculations for reference and money management.     </p>
             </a>
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
@@ -179,10 +179,10 @@
             <a href="#" class="flex flex-wrap no-underline hover:no-underline">
 
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                Budget Visualization.
+                Retirement Plans.
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
-                Store and manage digital copies of your receipts securely, eliminating paper clutter and simplifying expense tracking.              </p>
+                Store and manage money for future storage and live a peaceful retirement life.              </p>
             </a>
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
