--- a/registration.html
+++ b/registration.html
@@ -46,7 +46,9 @@
                         <label for=""><input type="checkbox">Remember Me </label>
                     </div>
                     <br>
-                    <button>Register</button>
+                    <a href="form.html">
+                <button>Register</button>
+                  </a>
                     <div class="register">
                         <p>Already have an account? <a href="login.html">Login</a></p>
                     </div>
