--- a/form.html
+++ b/form.html
@@ -71,7 +71,10 @@ background:  linear-gradient(90deg,  #0f68a9 0%,#86f7a4 90%);    }
 
     <!-- Add more fields as needed -->
 
-    <button type="submit" class="form-button">Submit</button>
+<a href="profile.html" class="form-button">
+  <button type="submit">Submit</button>
+</a>
+
   </form>
 </div>
 
