--- a/registration.html
+++ b/registration.html
@@ -46,7 +46,7 @@
                         <label for=""><input type="checkbox">Remember Me </label>
                     </div>
                     <br>
-                    <a href="form.html">
+                    <a href="form.html" class="form-button">
                 <button>Register</button>
                   </a>
                     <div class="register">
