--- a/tax.html
+++ b/tax.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body class="gradient1 min-h-screen flex flex-col items-center justify-center m-4">
-    <img src="./testtax.jpg" alt="Tax Calculator" class="mx-auto mb-4 w-32  h-32 object-cover rounded-full" />
+    <img src="./WhatsApp Image 2023-11-27 at 00.08.18_3df60868.jpg" alt="Tax Calculator" class="mx-auto mb-4 w-32  h-32 object-cover rounded-full" />
     <div class="p-5 bg-white rounded-lg shadow-xl max-w-md w-full m-4">
         <h1 class="text-2xl font-bold mb-4 text-center">Tax Calculator</h1>
         <p class="text-sm mb-4 text-center text-gray-800">Enter your income and tax rate, and our calculator will determine the amount of tax you need to pay. This tool helps you estimate your taxes easily and quickly.</p>
