--- a/registration.html
+++ b/registration.html
@@ -47,7 +47,7 @@
                     </div>
                     <br>
                     <a href="form.html" class="form-button">
-                <button>Register</button>
+                <button type="submit">Register</button>
                   </a>
                     <div class="register">
                         <p>Already have an account? <a href="login.html">Login</a></p>
